// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`electronDist 1`] = `"corrupted Electron dist"`;

exports[`one-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0.dmg",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-package 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleDocumentTypes": Array [
    Object {
      "CFBundleTypeExtensions": Array [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
      "LSHandlerRank": "Default",
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "boo",
      ],
      "CFBundleTypeIconFile": "Test App ßW.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Owner",
      "LSTypeIsPackage": true,
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "bar",
      ],
      "CFBundleTypeIconFile": "someFoo.icns",
      "CFBundleTypeName": "Bar",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Default",
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "foo",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.12.0",
  "LSRequiresNativeExecution": true,
  "LSUIElement": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-arm64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-universal.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-x64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.zip",
          },
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.zip",
          },
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.dmg",
          },
        ],
        "path": "TestApp-1.1.0-mac-x64.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.zip",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.zip",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.zip",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`two-package 2`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 3`] = `
Array [
  "icon.icns",
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
]
`;

exports[`two-package 4`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 5`] = `
Array [
  "icon.icns",
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
]
`;

exports[`two-package 6`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 7`] = `
Array [
  "icon.icns",
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
]
`;
